<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="txt_bill">Bill</string>
    <string name="edt_bill">0.00</string>
    
    <string name="txt_tip">Tip</string>
    <string name="edt_tip">0.10</string>
    
    <string name="txt_total">Total</string>
    <string name="edt_total">0.00</string>
    
    <string name="txt_persons">Persons</string>
    <string name="edt_persons">1</string>
    
    <string name="btn_split">Split</string>

</resources>
